--- a/path_finder_web/src/static/index.html
+++ b/path_finder_web/src/static/index.html
@@ -68,7 +68,7 @@
 							var i = (element.pose.position.x - lastMap.info.origin.position.x) / lastMap.info.resolution * mapScale;
 							var j = (element.pose.position.y - lastMap.info.origin.position.y) / lastMap.info.resolution * mapScale;
 
-							if(highlightedObject == null){
+							if(highlightedObject == null || highlightedObject != index){
 								ctx.fillStyle = "#00AA00";
 								ctx.fillRect(j, i, 3*mapScale, 3*mapScale);
 							} else {
@@ -155,6 +155,7 @@
 			function updatePose() {
 				$.get('/get_pose', function(msg) {
 					lastPose = msg;
+					// console.log(msg);
 				});
 				$.get('/get_objects', function(msg) {
 					lastObjects = msg;
@@ -163,12 +164,72 @@
 					if(lastObjects != null && lastObjects != '') {
 						lastObjects.markers.forEach((element, index) => {
 						innerHtml += `<li id="${'detected-object-' + index}" onmouseover="highlightObject(${index})" onmouseout="unhighlightObject(${index})" class="list-group-item">${element.text + ' ' + (index + 1) + 
-							'&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;coord: (' + element.pose.position.x + ', ' + element.pose.position.y + ')'}</li>`;
+							'&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;coord: (' + Math.round(element.pose.position.x * 100) / 100 + ', ' + Math.round(element.pose.position.y * 100) / 100 + ')'}</li>`;
 						});
 						detectedObjectsList.html(innerHtml);
 					}
 				});
 			}
+			function _arrayBufferToBase64( buffer ) {
+				var binary = '';
+				var bytes = new Uint8Array( buffer );
+				var len = bytes.byteLength;
+				for (var i = 0; i < len; i++) {
+					binary += String.fromCharCode( bytes[ i ] );
+				}
+				return window.btoa( binary );
+			}
+			function base64ArrayBuffer(arrayBuffer) {
+				var base64    = ''
+				var encodings = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/'
+
+				var bytes         = new Uint8Array(arrayBuffer)
+				var byteLength    = bytes.byteLength
+				var byteRemainder = byteLength % 3
+				var mainLength    = byteLength - byteRemainder
+
+				var a, b, c, d
+				var chunk
+
+				// Main loop deals with bytes in chunks of 3
+				for (var i = 0; i < mainLength; i = i + 3) {
+					// Combine the three bytes into a single integer
+					chunk = (bytes[i] << 16) | (bytes[i + 1] << 8) | bytes[i + 2]
+
+					// Use bitmasks to extract 6-bit segments from the triplet
+					a = (chunk & 16515072) >> 18 // 16515072 = (2^6 - 1) << 18
+					b = (chunk & 258048)   >> 12 // 258048   = (2^6 - 1) << 12
+					c = (chunk & 4032)     >>  6 // 4032     = (2^6 - 1) << 6
+					d = chunk & 63               // 63       = 2^6 - 1
+
+					// Convert the raw binary segments to the appropriate ASCII encoding
+					base64 += encodings[a] + encodings[b] + encodings[c] + encodings[d]
+				}
+
+				// Deal with the remaining bytes and padding
+				if (byteRemainder == 1) {
+					chunk = bytes[mainLength]
+
+					a = (chunk & 252) >> 2 // 252 = (2^6 - 1) << 2
+
+					// Set the 4 least significant bits to zero
+					b = (chunk & 3)   << 4 // 3   = 2^2 - 1
+
+					base64 += encodings[a] + encodings[b] + '=='
+				} else if (byteRemainder == 2) {
+					chunk = (bytes[mainLength] << 8) | bytes[mainLength + 1]
+
+					a = (chunk & 64512) >> 10 // 64512 = (2^6 - 1) << 10
+					b = (chunk & 1008)  >>  4 // 1008  = (2^6 - 1) << 4
+
+					// Set the 2 least significant bits to zero
+					c = (chunk & 15)    <<  2 // 15    = 2^4 - 1
+
+					base64 += encodings[a] + encodings[b] + encodings[c] + '='
+				}
+				
+				return base64
+				}
 
 			function init() {
 				console.log('initializing');
@@ -190,8 +251,9 @@
 				});
 				var enc = new TextDecoder("utf-8");
 				socket.on('image', (image) => {
+					// console.log(image.data)
 					const img = document.getElementById('image-stream');
-					img.src = `data:image/jpeg;base64,${btoa(String.fromCharCode(...new Uint8Array(image.data)))}`
+					img.src = `data:image/jpeg;base64,${base64ArrayBuffer(image.data)}`
 				})
 			}
 
@@ -201,12 +263,16 @@
     <body onload="init()" style="background-color: #e6f3ff;">
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 			<div class="container-fluid">
-			  <span class="navbar-brand">Robot Control Panel</span>
+			  	<span class="navbar-brand">
+					<img src="/icon" alt="Robot" style="width:50px; background-color: white; border-radius: 10px;" class="py-2 px-1"> 
+					Robot Control Panel
+				</span>
+				
 			</div>
 		</nav>
-		<div class="container-fluid p-4">
+		<div class="container p-4 mt-4" style="border: 1px solid lightgray; border-radius: 5px; background-color: white;">
 			<div class="row">
-				<div class="col-md-6 col-lg-7 col-xl-8">
+				<div class="col-md-6 col-lg-5 col-xl-7">
 					<div style="overflow: auto; max-width: 100%;">
 						<canvas id="map" width="300" height="300" style="border:1px solid grey;"></canvas>
 					</div>
@@ -215,16 +281,20 @@
 						<input type="range" min="0.5" max="8" value="2" step="0.2" id="scale_slider"/>
 					</div>
 				</div>
-				<div class="col-md-6 col-lg-5 col-xl-4">
+				<div class="col-md-6 col-lg-7 col-xl-5">
 					<img id="image-stream" class="w-100">
 				</div>
 			</div>
 			<hr class="mt-4 mb-2">
 			<div class="row">
-				<div class="col-xl-3 col-lg-4 col-md-6">
+				<div class="col-xl-3 col-lg-4 col-md-6 mx-auto">
 					<h3>Detected objects:</h3>
 					<ul id="object-list" class="list-group">
 					</ul>
+				</div>
+				<div class="col-lg-3 col-xl-5 d-none d-md-block mx-auto"></div>
+				<div class="col-md-6 col-lg-5 col-xl-4 mt-4 mx-auto">
+					<h5>Arm status: no object in hand</h4>
 				</div>
 			</div>			
 		</div>
